# JonasScraper

./: .gitignore  README.md  demo.ipynb  example.csv  pyproject.toml  requirements.txt
jonas/: __main__.py  parse_csv.py  pool.py  scrape.py  utils.py
jonas/database/: connection.py
jonas/manager/: base.py  new_urls.py
jonas/models/: manuscript.py  work.py
jonas/parsers/manuscript/: manuscript.py  witness.py
jonas/parsers/work/: witness.py  work.py
src/: __main__.py  __version__.py  datamodels.py  dbconnection.py  dump.py  jonaspage.py  main.py  manuscripts.py  manuscrit.py  oeuvre.py  params.py  parse_csv.py  pool.py  progress.py  scrape.py  sorter.py  utils.py
src/cli/: file.py
src/database/: connection.py
src/manager/: base.py  new_urls.py  supplement.py
src/models/: manuscript.py  witness.py  work.py
src/parsers/manuscript/: __init__.py  manuscript.py  witness.py
src/parsers/utils/: __init__.py  utils.py
src/parsers/work/: witness.py  work.py
src/scrapers/manuscript/: manuscript.py  witness.py
src/scrapers/utils/: __init__.py  table.py  utils.py
src/scrapers/work/: __init__.py  witness.py  work.py
tests/: conftest.py  urls.csv
tests/integration/: request_test.py  resquest_test.py
tests/unit/: batch_test.py  database_test.py  file_processor_test.py  manuscript_parser_test.py  manuscript_test.py  request_work_test.py  sort_test.py  url_parse_test.py  work_parser_test.py  work_test.py
