[project]
name = "jonas-scraper"
version = "0.0.1"
description = "Scraper of work and manuscript metadata from the Jonas website."
dynamic = ["readme"]
license = { file = "LICENSE" }
authors = [
    { name = "Kelly Christensen", email = "kelly.christensen@chartes.psl.eu" },
]
requires-python = ">=3.10"
dependencies = [
    "casanova>=2.0.2",
    "click>=8.2.1",
    "duckdb>=1.3.0",
    "lxml>=5.4.0",
    "pydantic>=2.11.4",
    "rich>=13.9.2",
    "termplotlib>=0.3.9",
    "ural>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
    "uv>=0.7.5",
    "pytest-xdist>=3.6.1",
]

[project.scripts]
jonas = "src.__main__:cli"

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
publish-url = "https://test.pypi.org/legacy/"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-p no:warnings", "--ignore=tests/db"]
testpaths = ["tests"]
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
